--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" type="text/css" href="//www.redditstatic.com/gold.css">
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-    <script type="text/javascript" src="/static/js/reddit/reddit.js"></script>
-    <script type="text/javascript" src="/static/js/lib/paper-core.js"></script>
-    <script type="text/javascript" src="/static/js/snoovatar/snoovatar.js"></script>
+    <script type="text/javascript" src="static/js/reddit/reddit.js"></script>
+    <script type="text/javascript" src="static/js/lib/paper-core.js"></script>
+    <script type="text/javascript" src="static/js/snoovatar/snoovatar.js"></script>
     <script type="text/javascript">
     r.snoovatar.initSnoovatar({
         "snoo_color": "#ffffff",
